Fix chat align

--- a/src/shared/ui-kit/Chat/MessageContent/MessageBox.css
+++ b/src/shared/ui-kit/Chat/MessageContent/MessageBox.css
@@ -128,6 +128,7 @@
   border-radius: 10px;
   color: #949bab;
   padding: 15px;
+  max-width: 80%;
 }
 
 .left-item .item-content .item-subtitle {
